--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "outDir": "./dist",
         "declaration": true,
         "experimentalDecorators": true,
-        "lib": ["es2017", "ES2017.Object", "DOM"]
+        "lib": ["es2017", "ES2017.Object", "DOM", "ES2015"]
     },
     "exclude": ["node_modules", ".env", ".env.example", "ws.json", "scripts", "docs", "test"]
 }
